--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.8.6",
-    "react-dom": "^16.8.4",
+    "react-dom": "^16.9.0",
     "react-scripts": "2.1.5",
     "react-test-renderer": "^16.10.2"
   },
@@ -24,7 +24,6 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "jest-dom": "^3.1.2",
-    "react-testing-library": "^6.1.2"
+    "jest-dom": "^3.1.2"
   }
 }
